--- a/.github/workflows/sprayer-custom-v1-worked.yml
+++ b/.github/workflows/sprayer-custom-v1-worked.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           echo "[*] Clonando Thermoptic..."
           git clone https://github.com/mandatoryprogrammer/thermoptic.git
-          cd thermoptic-working
+          cd thermoptic
           git checkout 50567634e30154dd73d759d923c655c8669ab75e
           
           echo "[*] Iniciando proxy via Docker Compose..."
