--- a/.github/workflows/sprayer-custom-v1-worked.yml
+++ b/.github/workflows/sprayer-custom-v1-worked.yml
@@ -33,7 +33,7 @@ jobs:
 
           sleep 15
 
-          curl --proxy http://changeme:changeme@127.0.0.1:1234 https://ja4db.com/id/ja4h/ || echo "curl ja4 failed"
+          curl --proxy http://changeme:changeme@127.0.0.1:1234 --insecure https://ja4db.com/id/ja4h/ || echo "curl ja4 failed"
 
           curl  https://ja4db.com/id/ja4h/ || echo "curl ja4 failed"
       
