--- a/.github/workflows/sprayer-custom-v1-worked.yml
+++ b/.github/workflows/sprayer-custom-v1-worked.yml
@@ -32,7 +32,7 @@ jobs:
           docker compose ps
 
           curl --proxy http://changeme:changeme@127.0.0.1:1234 --cacert ./ssl/rootCA.crt || echo "curl ja4 failed"
-
+          echo "Curl without proxy"
           curl  https://ja4db.com/id/ja4h/ || echo "curl ja4 failed"
       
       - name: Run Sprayer
