--- a/.github/workflows/sprayer-custom-v1-worked.yml
+++ b/.github/workflows/sprayer-custom-v1-worked.yml
@@ -31,9 +31,12 @@ jobs:
           echo "[+] Proxy Thermoptic iniciado"
           docker compose ps
 
-          curl --proxy http://changeme:changeme@127.0.0.1:1234 --cacert ./ssl/rootCA.crt || echo "curl ja4 failed"
+          echo "Curl proxy + insecure"
+          curl --proxy http://changeme:changeme@127.0.0.1:1234 --insecure || echo "curl proxy + insecure failed"
+          echo "Curl proxy"
+          curl --proxy http://changeme:changeme@127.0.0.1:1234 || echo "curl only proxy failed"
           echo "Curl without proxy"
-          curl  https://ja4db.com/id/ja4h/ || echo "curl ja4 failed"
+          curl  https://ja4db.com/id/ja4h/ || echo "curl default failed"
       
       - name: Run Sprayer
         run: python3 sprayer.py
