--- a/.github/workflows/sprayer-custom-v1-worked.yml
+++ b/.github/workflows/sprayer-custom-v1-worked.yml
@@ -32,11 +32,11 @@ jobs:
           docker compose ps
 
           echo "Setup certificate"
-          cp ssl/rootCA.crt /usr/local/share/ca-certificates/rootCA.crt || echo "Step 1 -> failed"
-          update-ca-certificates || echo "Step 2 -> failed"
+          sudo cp ssl/rootCA.crt /usr/local/share/ca-certificates/rootCA.crt || echo "Step 1 -> failed"
+          sudo update-ca-certificates || echo "Step 2 -> failed"
 
           echo "Curl proxy + insecure"
-          curl --proxy http://changeme:changeme@127.0.0.1:1234 --insecure https://ja4db.com/id/ja4h/ || echo "curl proxy + insecure failed"
+          curl --proxy http://127.0.0.1:1234 --insecure https://ja4db.com/id/ja4h/ || echo "curl proxy + insecure failed"
           echo "Curl proxy"
           curl --proxy http://changeme:changeme@127.0.0.1:1234 https://ja4db.com/id/ja4h/ || echo "curl only proxy failed"
           echo "Curl without proxy"
