--- a/.github/workflows/sprayer-custom-v1.yml
+++ b/.github/workflows/sprayer-custom-v1.yml
@@ -1,4 +1,4 @@
-name: Sprayer
+name: Sprayer 
  
 on:
   workflow_dispatch:
@@ -27,11 +27,12 @@ jobs:
           
           echo "[*] Iniciando proxy via Docker Compose..."
           docker compose up --build -d
-
-          sleep 20
           
           echo "[+] Proxy Thermoptic iniciado"
           docker compose ps
+          sleep 15
+          curl --proxy http://changeme:changeme@127.0.0.1:1234 --insecure https://ja4db.com/id/ja4h/ || echo "curl ja4 failed"
+          curl  https://ja4db.com/id/ja4h/ || echo "curl ja4 failed"
       
       - name: Run Sprayer
         run: python3 sprayer.py
