Update and rename worked.yml to ssl-verificated.yml

--- a/.github/workflows/ssl-verificated.yml
+++ b/.github/workflows/ssl-verificated.yml
@@ -1,4 +1,4 @@
-name: Sprayer worked
+name: Sprayer 
  
 on:
   workflow_dispatch:
@@ -31,8 +31,13 @@ jobs:
           echo "[+] Proxy Thermoptic iniciado"
           docker compose ps
           sleep 15
-          curl --proxy http://changeme:changeme@127.0.0.1:1234 --insecure https://ja4db.com/id/ja4h/ || echo "curl ja4 failed"
-          curl  https://ja4db.com/id/ja4h/ || echo "curl ja4 failed"
+          
+          echo "--- TESTES DE CONEXÃO ---"
+          # Teste 1: Inseguro (deve funcionar)
+          curl --proxy http://changeme:changeme@127.0.0.1:1234 --insecure https://ja4db.com/id/ja4h/ || echo "curl insecure failed"
+          
+          # Teste 2: Seguro sem config (deve falhar no handshake)
+          curl --proxy http://changeme:changeme@127.0.0.1:1234 https://ja4db.com/id/ja4h/ || echo "curl secure failed (esperado)"
       
       - name: Run Sprayer
         run: python3 sprayer.py
@@ -42,7 +47,10 @@ jobs:
           CATCHERURL: ${{ secrets.CATCHERURL }}
           CATCHERTLS: ${{ secrets.CATCHERTLS }}
           INSTANCE_ID: ${{ github.run_id }}
-      
+          # ADICIONADO AQUI:
+          # Aponta para o certificado dentro da pasta clonada
+          REQUESTS_CA_BUNDLE: ${{ github.workspace }}/thermoptic/ssl/rootCA.crt
+
       - name: Stop Thermoptic Proxy
         if: always()
         run: |
