--- a/.github/workflows/ssl-verificated.yml
+++ b/.github/workflows/ssl-verificated.yml
@@ -32,8 +32,7 @@ jobs:
           docker compose ps
           sleep 15
           
-          # Debug: Verificar se o arquivo de certificado existe no caminho esperado
-          ls -la ssl/rootCA.crt
+          curl --proxy http://changeme:changeme@127.0.0.1:1234 --cacert ssl/rootCA.crt https://ja4db.com/id/ja4h/
       
       - name: Run Sprayer
         run: python3 sprayer.py
